style/Global/global.css
/*

Theme Name: RL Air
Author: Opitux
Version: 2.2
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html

 * ==============================================================================
 * ------------------------------------------------------------------------------
 * Table of Contents:
 *
 *	1.0 - Reset
 *	2.0 - FLUXBB AIR
 *	3.0 - FLUXBB AIR RESPONSIVE
 *	4.0 - TEMPLATE
 *		4.1 - template RL
 *		4.2 - fluxbb
 *		4.3 - dokuwiki
 *		4.4 - uniformisation

 *	5.0 - MEDIA QUERIES 1024
 *		5.1 - Media queries 1024 template RL
 *		5.2 - Media queries 1024 fluxbb
 *		5.3 - Media queries 1024 dokuwiki
 *		5.4 - Media queries 1024 uniformisation

 *	6.0 - MEDIA QUERIES 768
 *		6.1 - Media queries 768 template RL
 *		6.2 - Media queries 768 fluxbb
 *		6.3 - Media queries 768 dokuwiki
 *		6.4 - Media queries 768 uniformisation

 *	7.0 - MEDIA QUERIES 480
 *		7.1 - Media queries 480 template RL
 *		7.2 - Media queries 480 fluxbb
 *		7.3 - Media queries 480 dokuwiki
 *		7.4 - Media queries 480 uniformisation

 *	8.0 - MEDIA QUERIES 380

 *	9.0 - UPLOADS FOTOO


 */

@font-face {
	font-family: "FontAwesome";
	src: url(../../../tpl/fonts/font-awesome/fonts/fontawesome-webfont.woff);
}

/**
 * ------------------------------------------------------------------------------
 * ==============================================================================
 * 1.0 - Reset
 */

* {
	margin: 0;
	padding: 0;
}
html {
	overflow-y: scroll;
}
body,
html {
	overflow-x:hidden;
	position:relative;
	min-height: 100vh;
	text-align: left;
}
li {
	padding: 0px;
	margin: 0px;
}
#brdmenu,
#dokuwiki__header .tools li {
	font-size: 1em;
}
iframe {
	max-width: 100% !important;
}
textarea,
input[type="text"],
input[type="button"],
input[type="submit"],
input[type="password"],
input[type="search"] {
	-webkit-appearance:	none;
	appearance: none;
	box-shadow: none;
}
h1,
h1 a {
	font-size: 2.4rem;
	margin:0 0 .444em;
}
h2 {
	font-size: 2rem;
	margin:0 0 .666em;
}
h3 {
	font-size: 1.8rem;
	margin:0 0 .888em;
}
h4 {
	font-size: 1.6rem;
	margin:0 0 1em;
}
h5 {
	font-size: 1.4rem;
	margin:0 0 1.1428em;
}
h6 {
	font-size: 1.2rem;
	margin:0 0 1.333em;
}
/* Headings */

h1,
h1 span,
h1 a,
h2,
h3,
h4,
h5,
h6 {
	font-weight: bold;
	padding: 0;
	line-height: 1.2;
}

p,
ul,
ol,
dl,
pre,
table,
hr,
blockquote,
figure,
details,
fieldset,
address {
margin:0 0 1.4em 0;
padding:0;
}
img {
	max-width: 100%;
	max-height: auto;
}
/* ... */

